# myDNN

./: README.md
myDNN/: CMakeLists.txt  SocketServer.cpp  SocketServer.h  TestYolo  centerface.cpp  centerface.h  client.py  detector.cpp  detector.h  logSoftmax.h  main.cpp  mask.cpp  mask.h  yolo.cfg  yolo.cpp  yolo.h  yolo.names
