cmake_minimum_required(VERSION 2.8)
project( TestYolo )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
aux_source_directory(. DIR_SRCS)
add_executable( TestYolo ${DIR_SRCS} )
target_link_libraries( TestYolo ${OpenCV_LIBS} )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -std=c++0x")
